# DeepClaude

./: Dockerfile  pyproject.toml
app/clients/: __init__.py  claude_client.py  deepseek_client.py  gemini_client.py  openai_compatible_client.py
app/deepclaude/: deepclaude.py
app/gemini_composite/: __init__.py  gemini_composite.py
app/manager/: model_manager.py
app/model_manager/: model_configs.json
app/openai_composite/: openai_composite.py
app/utils/: format_converter.py  xml_tool_filter.py
frontend/: index.html
frontend/js/: auth.js  config.js
